@@ -3,11 +3,12 @@ package com.example.fleetmanagement.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import com.example.fleetmanagement.dto.OptimizedRouteResponse;
 import com.example.fleetmanagement.model.*;
 import com.example.fleetmanagement.repositry.RouteRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
+// import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,9 +17,29 @@ public class RouteService {
     private final RouteRepository routeRepo;
     private final RouteOptimizationService optimizer;
 
-    public List<Integer> optimizeRoute(Long routeId) {
+    // public List<Integer> optimizeRoute(Long routeId) {
 
-        // Fetch route
+    //     // Fetch route
+    //     Route route = routeRepo.findById(routeId)
+    //             .orElseThrow(() -> new RuntimeException("Route not found"));
+
+    //     List<DeliveryTask> tasks = route.getDeliveryTasks();
+
+    //     if (tasks == null || tasks.size() < 2) {
+    //         throw new RuntimeException("Not enough tasks to optimize");
+    //     }
+
+    //     // Convert to OSRM format (lng,lat)
+    //     List<String> coords = tasks.stream()
+    //             .map(t -> t.getDeliveryLongitude() + "," + t.getDeliveryLatitude())
+    //             .collect(Collectors.toList());
+
+    //     // FIXED method call
+    //     return optimizer.optimize(coords);
+    // }
+
+    public OptimizedRouteResponse optimizeRoute(Long routeId) {
+
         Route route = routeRepo.findById(routeId)
                 .orElseThrow(() -> new RuntimeException("Route not found"));
 
@@ -28,12 +49,28 @@ public class RouteService {
             throw new RuntimeException("Not enough tasks to optimize");
         }
 
-        // Convert to OSRM format (lng,lat)
+        // Convert to coordinates
         List<String> coords = tasks.stream()
                 .map(t -> t.getDeliveryLongitude() + "," + t.getDeliveryLatitude())
-                .collect(Collectors.toList());
+                .toList();
 
-        // FIXED method call
-        return optimizer.optimize(coords);
+        // Get index order
+        List<Integer> order = optimizer.optimize(coords);
+
+        // Convert index → task details
+        List<OptimizedRouteResponse.TaskInfo> result = new java.util.ArrayList<>();
+
+        for (Integer i : order) {
+            DeliveryTask t = tasks.get(i);
+
+            result.add(new OptimizedRouteResponse.TaskInfo(
+                    t.getId(),
+                    t.getCustomerName(),
+                    t.getDeliveryAddress(),
+                    t.getStatus().name()
+            ));
+        }
+
+        return new OptimizedRouteResponse(routeId, result);
     }
 }
